added another paragraph

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <p>
                 I will write here some paragraph related to the any specific thing.
             </p><br>
+            <p>
+                Lets get started with the html5 and css3. here we are going to some awesome things. 
+                But first we need some raw content that we can later use.
+            </p>
         </section>
         <footer>All rights reserved</footer>
     </body>
